--- a/public/codecheck.css
+++ b/public/codecheck.css
@@ -3,7 +3,7 @@
   font-family: "DejaVuSansMonoSemiCondensed";
   font-style: normal;
   font-weight: normal;
-  src: url("http://horstmann.com/DejaVuSansMonoCondensed.otf"), local("DejaVuSansMonoCondensed")  
+  src: url("https://horstmann.com/DejaVuSansMonoCondensed.otf"), local("DejaVuSansMonoCondensed")  
 }
 
 
