--- a/app/views/editAssignment.scala.html
+++ b/app/views/editAssignment.scala.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="/assets/codecheck.css"/>
     <script type="text/javascript">//<![CDATA[
-    const assignmentID = '@assignmentID'
+    let assignmentID = '@assignmentID'
     const assignmentData = @Html(assignment)    
     //]]></script>
     <script src="/assets/main.js" type="text/javascript"></script>
@@ -15,7 +15,7 @@
 </head>
 <body>
  <h1>Edit Assignment</h1>
- <p>Enter problem URLs or IDs, one per line</p>
+ <p>Enter problem URLs or IDs, one per line:</p>
  <textarea style="display: block; width: 90%;" id="assignment" rows="10"></textarea>
  <p>Deadline (<b>In UTC</b>):</p>
  <input type="date" id="deadlineDate" />  <input type="time" id="deadlineTime" value="23:59"/>
