Dynamo table for assignments

--- a/app/views/editAssignment.scala.html
+++ b/app/views/editAssignment.scala.html
@@ -16,7 +16,7 @@
 <body>
  <h1>Edit Assignment</h1>
  <p>Enter problem URLs or IDs, one per line:</p>
- <textarea style="display: block; width: 90%;" id="assignment" rows="10"></textarea>
+ <textarea style="display: block; width: 90%;" id="problems" rows="10"></textarea>
  <p>Deadline (<b>In UTC</b>):</p>
  <input type="date" id="deadlineDate" />  <input type="time" id="deadlineTime" value="23:59"/>
  <p>Leave date blank for no deadline.</p>
