--- a/app/views/workAssignment.scala.html
+++ b/app/views/workAssignment.scala.html
@@ -1,4 +1,4 @@
-@(assignment: String, work: String, studentID: String)
+@(assignment: String, work: String, studentID: String, lti: String)
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -7,14 +7,16 @@
     <link rel="stylesheet" href="/assets/codecheck.css"/>
     <script type="text/javascript">//<![CDATA[
     const studentID = '@studentID'
-    const assignmentData = @Html(assignment)    
+    const assignment = @Html(assignment)
     let work = @Html(work)
+    const lti = @Html(lti)
+    
     //]]></script>
     <script src="/assets/main.js" type="text/javascript"></script>
     <script src="/assets/workAssignment.js" type="text/javascript"></script>
     <title>Your Assignment</title>
 </head>
-<body>
+<body> <!-- TODO: This should NOT happen when lti -->
    <div class="studentInstructions">
         <h1 id="heading">Your Assignment</h1>
         <p>Your CodeCheck ID: <span class="ccid">@studentID</span></p>
@@ -23,13 +25,6 @@
           <li id="switchID">Not your ID? Enter yours here: <input id='newccid' type='text' size='30'/>
           <li id="clearID">If you work on a shared computer, clear the ID after you are done</li>
         </ul>
-  <!--  TODO when inside LTI
-        <p>
-            When you are done, click <button onclick="submitGrades()">Record my score</button> to save your score in the gradebook.
-        </p>
- -->        
-
-
  <dl id="urls">
   <dt>Use this private URL for resuming your work later:</dt><dd id="returnToWork"><span id="returnToWorkURL" class="ccurl"></span></dd>  
  </dl>
