--- a/app/views/workAssignment.scala.html
+++ b/app/views/workAssignment.scala.html
@@ -17,7 +17,7 @@
     <title>Your Assignment</title>
 </head>
 <body> <!-- TODO: This should NOT happen when lti -->
-   <div class="studentInstructions">
+   <div id="studentInstructions">
         <h1 id="heading">Your Assignment</h1>
         <p>Your CodeCheck ID: <span class="ccid">@studentID</span></p>
         <ul id="ccidBullets">
