--- a/app/views/workAssignment.scala.html
+++ b/app/views/workAssignment.scala.html
@@ -16,7 +16,10 @@
     <script src="/assets/workAssignment.js" type="text/javascript"></script>
     <title>Your Assignment</title>
 </head>
-<body> <!-- TODO: This should NOT happen when lti -->
+<body> 
+   <div id="instructorInstructions">
+     <p id="viewSubmissions">You are viewing this assignment as instructor.</p>
+   </div>
    <div id="studentInstructions">
         <h1 id="heading">Your Assignment</h1>
         <p>Your CodeCheck ID: <span class="ccid">@studentID</span></p>
