--- a/app/views/editAssignment.scala.html
+++ b/app/views/editAssignment.scala.html
@@ -1,4 +1,4 @@
-@(assignment: String, lti: String)
+@(assignment: String)
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="/assets/codecheck.css"/>
     <script type="text/javascript">//<![CDATA[
     const assignment = @Html(assignment)    
-    const lti = @Html(lti)
     //]]></script>
     <script src="/assets/main.js" type="text/javascript"></script>
     <script src="/assets/editAssignment.js" type="text/javascript"></script>    
