--- a/app/views/workAssignment.scala.html
+++ b/app/views/workAssignment.scala.html
@@ -17,22 +17,26 @@
     <title>Your Assignment</title>
 </head>
 <body> 
+   <h1 id="heading">Your Assignment</h1>
    <div id="instructorInstructions">
      <p id="viewSubmissions">You are viewing this assignment as instructor.</p>
    </div>
    <div id="studentInstructions">
-        <h1 id="heading">Your Assignment</h1>
-        <p>Your CodeCheck ID: <span class="ccid">@studentID</span></p>
-        <ul id="ccidBullets">
-          <li>Share this ID with your professor</li>
-          <li id="switchID">Not your ID? Enter yours here: <input id='newccid' type='text' size='30'/>
-          <li id="clearID">If you work on a shared computer, clear the ID after you are done</li>
-        </ul>
- <dl id="urls">
-  <dt>Use this private URL for resuming your work later:</dt><dd id="returnToWork"><span id="returnToWorkURL" class="ccurl"></span></dd>  
- </dl>
- <p id="savedcopy"><input type="checkbox"/>  I saved a copy of the private URL</p>
- </div>
+	   <p>Your CodeCheck ID: <span class="ccid">@studentID</span></p>
+	   <ul id="ccidBullets">
+	     <li>Share this ID with your professor</li>
+	     <li id="switchID">Not your ID? Enter yours here: <input id='newccid' type='text' size='30'/>
+	     <li id="clearID">If you work on a shared computer, clear the ID after you are done</li>
+	   </ul>
+	   <dl id="urls">
+	     <dt>Use this private URL for resuming your work later:</dt>
+	     <dd id="returnToWork"><span id="returnToWorkURL" class="ccurl"></span></dd>  
+	   </dl>
+	   <p id="savedcopy"><input type="checkbox"/>  I saved a copy of the private URL</p>
+   </div>
+   <div id="studentLTIInstructions">
+     <p>Your Learning Management System ID: <span class="ccid">@studentID</span></p>
+   </div>
 <p class='message' id='response'></p>
 <p id="abovebuttons">Click on the buttons below to view all parts of the assignment.</p>
 </body>
