--- a/app/views/workAssignment.scala.html
+++ b/app/views/workAssignment.scala.html
@@ -35,6 +35,7 @@
 	   <p id="savedcopy"><input type="checkbox"/>  I saved a copy of the private URL</p>
    </div>
    <div id="studentLTIInstructions">
+     <p id="LTIsubmitLTIButton"></p>
      <p>Your Learning Management System ID: <span class="ccid">@studentID</span></p>
    </div>
 <p class='message' id='response'></p>
