--- a/app/views/workAssignment.scala.html
+++ b/app/views/workAssignment.scala.html
@@ -35,8 +35,9 @@
 	   <p id="savedcopy"><input type="checkbox"/>  I saved a copy of the private URL</p>
    </div>
    <div id="studentLTIInstructions">
-     <p id="submitLTIButton"></p>
-     <p>Your Learning Management System ID: <span class="ccid">@studentID</span></p>
+     <p>You are viewing this assignment from a Learning Management System (LMS)</p>
+     <p>Your LMS ID: <span class="ccid">@studentID</span></p>
+     <p>Wrong score in LMS? <span id="submitLTIButton"></span></p>
    </div>
 <p class='message' id='response'></p>
 <p id="abovebuttons">Click on the buttons below to view all parts of the assignment.</p>
