--- a/app/views/viewSubmissions.scala.html
+++ b/app/views/viewSubmissions.scala.html
@@ -1,4 +1,4 @@
-@(submissions: String, editURL: String)
+@(submissions: String)
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="/assets/codecheck.css"/>
     <script type="text/javascript">//<![CDATA[
     const submissionData = @Html(submissions)
-    const editURL = '@editURL'
     //]]></script>
     <script src="/assets/main.js" type="text/javascript"></script>
     <script src="/assets/viewSubmissions.js" type="text/javascript"></script>
