--- a/app/views/workAssignment.scala.html
+++ b/app/views/workAssignment.scala.html
@@ -19,7 +19,7 @@
 <body> 
    <h1 id="heading">Your Assignment</h1>
    <div id="instructorInstructions">
-     <p id="viewSubmissions">You are viewing this assignment as instructor.</p>
+     <p id="viewingAsInstructor">You are viewing this assignment as instructor.</p>
    </div>
    <div id="studentInstructions">
 	   <p>Your CodeCheck ID: <span class="ccid">@studentID</span></p>
