--- a/app/views/editAssignment.scala.html
+++ b/app/views/editAssignment.scala.html
@@ -15,6 +15,7 @@
 </head>
 <body>
  <h1>Edit Assignment</h1>
+ <div id='viewSubmissionsDiv'></div>
  <p>Enter problem URLs or IDs, one per line:</p>
  <textarea style="display: block; width: 90%;" id="problems" rows="10"></textarea>
  <div id="deadlineDiv">
