--- a/public/codecheck.css
+++ b/public/codecheck.css
@@ -76,6 +76,11 @@ body {
     margin-left: 1em;
     margin-right: 1em;
     user-select: none;
+    display: inline-block; 
+}
+
+#buttons > hc-button { 
+	margin-bottom: 0.5em; 
 }
 
 /* Button states */
