--- a/app/views/viewSubmissions.scala.html
+++ b/app/views/viewSubmissions.scala.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="/assets/codecheck.css"/>
     <script type="text/javascript">//<![CDATA[
-    const resourceID = @Html(resourceID)
+    const resourceID = '@resourceID'
     const submissionData = @Html(submissions)
     //]]></script>
     <script src="/assets/main.js" type="text/javascript"></script>
