--- a/app/views/workAssignment.scala.html
+++ b/app/views/workAssignment.scala.html
@@ -24,7 +24,7 @@
        <dt>Public URL for your students:</dt><dd><span id="publicURL" class="ccurl"></span></dd>
        <dt>Private URL for you only:</dt><dd><span id="privateURL" class="ccurl"></span></dd>  
      </dl>     
-     <p>User ID: <span class="ccid"></span></p>
+     <p>ID: <span class="ccid"></span></p>
    </div>
    <div id="studentInstructions">
 	   <p>Your CodeCheck ID: <span class="ccid"></span></p>
