--- a/app/views/workAssignment.scala.html
+++ b/app/views/workAssignment.scala.html
@@ -10,7 +10,6 @@
     let work = @Html(work)
     const studentID = '@studentID'
     const lti = @Html(lti)
-    
     //]]></script>
     <script src="/assets/main.js" type="text/javascript"></script>
     <script src="/assets/workAssignment.js" type="text/javascript"></script>
@@ -19,12 +18,15 @@
 <body> 
    <h1 id="heading">Your Assignment</h1>
    <div id="instructorInstructions">
-     <p id="viewingAsInstructor">You are viewing this assignment as instructor.</p>
-     <dl id="urls">
-       <dt>Public URL for your students:</dt><dd><span id="publicURL" class="ccurl"></span></dd>
-       <dt>Private URL for you only:</dt><dd><span id="privateURL" class="ccurl"></span></dd>  
-     </dl>     
-     <p>ID: <span class="ccid"></span></p>
+      <p id="viewingAsInstructor">You are viewing this assignment as instructor.</p>
+      <dl id="urls">
+        <dt>Public URL for your students:</dt><dd><span id="publicURL" class="ccurl"></span></dd>
+        <dt>Private URL for you only:</dt><dd><span id="privateURL" class="ccurl"></span></dd>  
+      </dl>     
+      <p>ID: <span class="ccid"></span></p>
+      <label>Feedback:</label><br>
+      <textarea style="display: block; width: 80%; font-size: 14px; font-weight: 500;" id="comment" rows="10"></textarea>
+      <div id='saveButtonDiv'></div>
    </div>
    <div id="studentInstructions">
 	   <p>Your CodeCheck ID: <span class="ccid"></span></p>
@@ -37,11 +39,15 @@
 	     <dd id="returnToWork"><span id="returnToWorkURL" class="ccurl"></span></dd>  
 	   </dl>
 	   <p id="savedcopy"><input type="checkbox"/>  I saved a copy of the private URL</p>
+     <label>Instructor's Feedback:</label><br>
+     <textarea readonly style="display: block; width: 80%; font-size: 14px; font-weight: 500;" id="student_comment" rows="10"></textarea>
    </div>
    <div id="studentLTIInstructions">
      <p>You are viewing this assignment from a Learning Management System (LMS)</p>
      <p>Your LMS ID: <span class="ccid"></span></p>
      <p>Wrong score in LMS? <span id="submitLTIButton"></span></p>
+     <label>Instructor's Feedback:</label><br>
+     <textarea readonly style="display: block; width: 80%; font-size: 14px; font-weight: 500;" id="student_lti_comment" rows="10"></textarea>     
    </div>
 <p class="message" id="response"></p>
 <p id="abovebuttons">Click on the buttons below to view all parts of the assignment.</p>
