change view workAssignment so that instuctor feedback textbox only display when viewing submission as instructor

--- a/app/views/workAssignment.scala.html
+++ b/app/views/workAssignment.scala.html
@@ -24,7 +24,7 @@
         <dt>Private URL for you only:</dt><dd><span id="privateURL" class="ccurl"></span></dd>  
       </dl>     
       <p>ID: <span class="ccid"></span></p>
-      <label>Feedback:</label><br>
+      <label id="label_feedback_instruction">You can leave feedback for students when viewing their submissions</label><br>
       <textarea style="display: block; width: 80%; font-size: 14px; font-weight: 500;" id="comment" rows="10"></textarea>
       <div id='saveButtonDiv'></div>
    </div>
