--- a/app/views/workAssignment.scala.html
+++ b/app/views/workAssignment.scala.html
@@ -36,6 +36,9 @@
 	     <dt>Use this private URL for resuming your work later:</dt>
 	     <dd id="returnToWork"><span id="returnToWorkURL" class="ccurl"></span></dd>  
 	   </dl>
+     <p id="deadline" style="font-weight: bold;"></p>
+     <p id="deadlineLocal" style="font-weight: bold;"></p>
+     <p id="deadlineUTC" style="font-weight: bold;"></p>
 	   <p id="savedcopy"><input type="checkbox"/>  I saved a copy of the private URL</p>
    </div>
    <div id="studentLTIInstructions">
