Deploy staging play-codecheck

--- a/app/views/editAssignment.scala.html
+++ b/app/views/editAssignment.scala.html
@@ -19,7 +19,7 @@
  <p>Enter problem URLs or IDs, one per line:</p>
  <textarea style="display: block; width: 90%;" id="problems" rows="10"></textarea>
  <div id="deadlineDiv">
-    <p>Deadline : (<b>Local Time</b>)</p>
+    <p>Deadline (<b>Local Time</b>):</p>
     <input type="datetime-local" id="deadlineDate" name="date"/>
     <p id="deadlineLocal" style="font-weight: bold;"></p>
     <p id="deadlineUTC" style="font-weight: bold;"></p>
