--- a/app/views/edit.scala.html
+++ b/app/views/edit.scala.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Edit Problem</title>
 </head>
-<body style="font-family: sans;">
+<body style="font-family: sans-serif;">
 <form method="post" action="/editedFiles/@pid/@editKey">
     <div>
  @for(((k, v), i) <- files.toSeq.zipWithIndex) {
