Deploy staging play-codecheck

--- a/app/views/workAssignment.scala.html
+++ b/app/views/workAssignment.scala.html
@@ -15,8 +15,9 @@
     <script src="/assets/workAssignment.js" type="text/javascript"></script>
     <title>Your Assignment</title>
 </head>
-<body> 
-   <h1 id="heading">Your Assignment</h1>
+<body>
+   <details open="open"> 
+   <summary id="heading">Your Assignment</summary>
    <div id="instructorInstructions">
       <p id="viewingAsInstructor">You are viewing this assignment as instructor.</p>
       <dl id="urls">
@@ -56,5 +57,6 @@
    </div>
 <p class="message" id="response"></p>
 <p id="abovebuttons">Click on the buttons below to view all parts of the assignment.</p>
+</details>
 </body>
 </html>
