--- a/app/views/editAssignment.scala.html
+++ b/app/views/editAssignment.scala.html
@@ -9,7 +9,7 @@
     const assignment = @Html(assignment)
     const askForDeadline = @askForDeadline
     //]]></script>
-    <script src="/assets/main.js" type="text/javascript"></script>
+    <script src="/assets/util.js" type="text/javascript"></script>
     <script src="/assets/editAssignment.js" type="text/javascript"></script>    
     <title>Edit Assignment</title>
 </head>
