--- a/app/views/workAssignment.scala.html
+++ b/app/views/workAssignment.scala.html
@@ -11,7 +11,7 @@
     const studentID = '@studentID'
     const lti = @Html(lti)
     //]]></script>
-    <script src="/assets/main.js" type="text/javascript"></script>
+    <script src="/assets/util.js" type="text/javascript"></script>
     <script src="/assets/workAssignment.js" type="text/javascript"></script>
     <title>Your Assignment</title>
 </head>
