--- a/app/views/edit.scala.html
+++ b/app/views/edit.scala.html
@@ -7,6 +7,8 @@
     <title>Edit Problem</title>
 </head>
 <body style="font-family: sans-serif;">
+<div id = "studentUrl">
+</div>
 <form method="post" action="/editedFiles/@pid/@editKey">
     <div>
  @for(((k, v), i) <- files.toSeq.zipWithIndex) {
@@ -61,6 +63,21 @@ document.getElementById('upload').disabled = document.getElementById('file').fil
 document.getElementById('file').addEventListener('change', function() {
     document.getElementById('upload').disabled = document.getElementById('file').files.length === 0
 })
+</script>
+<script type="text/javascript">
+const url = window.location.protocol + "//" + window.location.host + "/files/" + '@pid'
+
+const text = document.createTextNode("Public URL (for your students): ")
+
+const a = document.createElement('a')
+a.title = url
+a.href = url
+const link = document.createTextNode(url)
+a.appendChild(link)
+
+const div = document.querySelector("#studentUrl")
+div.appendChild(text)
+div.appendChild(a)
 </script>
 </body>
 </html>
