--- a/app/views/edit.scala.html
+++ b/app/views/edit.scala.html
@@ -1,4 +1,4 @@
-@(pid: String, files: Map[String, String], editKey: String)
+@(pid: String, files: Map[String, String], editKey: String, pUrl: String)
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -7,8 +7,8 @@
     <title>Edit Problem</title>
 </head>
 <body style="font-family: sans-serif;">
-<div id = "studentUrl">
-</div>
+Public URL (for your students): 
+<a href="@pUrl">@pUrl</a>
 <form method="post" action="/editedFiles/@pid/@editKey">
     <div>
  @for(((k, v), i) <- files.toSeq.zipWithIndex) {
@@ -63,21 +63,6 @@ document.getElementById('upload').disabled = document.getElementById('file').fil
 document.getElementById('file').addEventListener('change', function() {
     document.getElementById('upload').disabled = document.getElementById('file').files.length === 0
 })
-</script>
-<script type="text/javascript">
-const url = window.location.protocol + "//" + window.location.host + "/files/" + '@pid'
-
-const text = document.createTextNode("Public URL (for your students): ")
-
-const a = document.createElement('a')
-a.title = url
-a.href = url
-const link = document.createTextNode(url)
-a.appendChild(link)
-
-const div = document.querySelector("#studentUrl")
-div.appendChild(text)
-div.appendChild(a)
 </script>
 </body>
 </html>
