--- a/app/views/edit.scala.html
+++ b/app/views/edit.scala.html
@@ -1,4 +1,4 @@
-@(pid: String, files: Map[String, String], editKey: String, pUrl: String)
+@(pid: String, files: Map[String, String], editKey: String, publicURL: String)
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -8,7 +8,7 @@
 </head>
 <body style="font-family: sans-serif;">
 Public URL (for your students): 
-<a href="@pUrl">@pUrl</a>
+<a href="@publicURL">@publicURL</a>
 <form method="post" action="/editedFiles/@pid/@editKey">
     <div>
  @for(((k, v), i) <- files.toSeq.zipWithIndex) {
