Deploy staging play-codecheck

--- a/app/views/edit.scala.html
+++ b/app/views/edit.scala.html
@@ -8,7 +8,7 @@
 </head>
 <body style="font-family: sans-serif;">
 Public URL (for your students): 
-<a href="@publicURL">@publicURL</a>
+<a href="@publicURL" target="_blank">@publicURL</a>
 <form method="post" action="/editedFiles/@pid/@editKey">
     <div>
  @for(((k, v), i) <- files.toSeq.zipWithIndex) {
